--- a/app/src/main/res/layout/activity_show_all_data.xml
+++ b/app/src/main/res/layout/activity_show_all_data.xml
@@ -14,6 +14,11 @@
         android:layout_height="wrap_content"
         android:text="Show" />
     <Button
+        android:id="@+id/syncall"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Sync All" />
+    <Button
         android:id="@+id/clearall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
